--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,14 +2,14 @@
 - title: Home
   url: /
 
-- title: Presentations
-  url: /presentations/
+- title: About
+  url: /about/
 
-- title: CV
-  url: /cv/
+- title: Research
+  url: /research/
 
-- title: Blog
-  url: /blog/
+- title: Teaching
+  url: /teaching/
 
-- title: Workshops
-  url: /workshops/
+- title: Contact
+  url: /contact/
