--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,6 +13,9 @@
   
 - title: Consultancy
   url: /consultancy/
+  
+- title: Public Engagement
+  url: /publicengagement/
 
 - title: Contact
   url: /contact/
