--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ owner:
   name: Patricia Jackman
   avatar: logo.jpg
   bio: "This is a sample Jekyll academic website."
-  email: 
+  email: pjackman@lincoln.ac.uk
   # Do not include the @ symbol in your Twitter username
   twitter: Trish_Jackman
   linkedin: patricia-jackman-67456659
