--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: # filename of a logo image that has been placed into your images directory
 owner:
   name: Patricia Jackman
   avatar: logo.jpg
-  bio: "This is a sample Jekyll academic website."
+  bio: "PhD, FHEA."
   email: pjackman@lincoln.ac.uk
   # Do not include the @ symbol in your Twitter username
   twitter: Trish_Jackman
