--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title: Academic Website of Patricia Jackman
+title: Patricia Jackman
 locale: en_US
 logo: # filename of a logo image that has been placed into your images directory
 
