--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ owner:
   lastfm: #username
   tumblr: #username
   pinterest: #username
+  kudos: patrica_jackman
   foursquare: #username
   steam: #username
   dribbble: #username
