--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ owner:
   tumblr: #username
   pinterest: #username
   kudos: patrica_jackman
+  publons: patricia-c-jackman
   foursquare: #username
   steam: #username
   dribbble: #username
