--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ owner:
   lastfm: #username
   tumblr: #username
   pinterest: #username
-  kudos: patrica_jackman
+  kudos: patricia_jackman
   publons: patricia-c-jackman
   foursquare: #username
   steam: #username
